<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.diploma_test.ui.ChatsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.diploma_test.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_wiki"
        android:name="com.example.diploma_test.ui.WikiFragment"
        android:label="@string/title_wiki"
        tools:layout="@layout/fragment_wiki" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.diploma_test.ui.MapFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/create_new_post"
        android:name="com.example.diploma_test.ui.CreatePostFragment"
        android:label="@string/addnews"
        tools:layout="@layout/fragment_createpost" />

    <fragment
        android:id="@+id/fragment_inside_chat"
        android:name="com.example.diploma_test.ui.ChannelFragment"
        android:label="@string/addnews"
        tools:layout="@layout/fragment_insidechat" />
</navigation>